--- a/tpl/header.html
+++ b/tpl/header.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="/css/base.css?ver=1" />
   <title>{title}</title>
 </head>
 <body>
